ok componente y page login

--- a/church-ae-war/web/pages/administrator/ad_users.xhtml
+++ b/church-ae-war/web/pages/administrator/ad_users.xhtml
@@ -27,9 +27,9 @@
                         <p:outputLabel for="itUsername" value="Usuario:"></p:outputLabel>
                         <p:inputText id="itUsername" value="#{activeItem.username}"></p:inputText>
                         <p:outputLabel for="itPass1" value="Contraseña:"></p:outputLabel>
-                        <p:inputText id="itPass1" value="#{adUser.pass1}"></p:inputText>
+                        <p:inputText id="itPass1" value="#{adUser.pass1}" type="password"></p:inputText>
                         <p:outputLabel for="itPass2" value="Confirmación Contraseña:"></p:outputLabel>
-                        <p:inputText id="itPass2" value="#{adUser.pass2}"></p:inputText>
+                        <p:inputText id="itPass2" value="#{adUser.pass2}" type="password"></p:inputText>
                         <p:outputLabel for="itDescription" value="Descripción"></p:outputLabel>
                         <p:inputText id="itDescription" value="#{activeItem.description}"></p:inputText>
                     </h:panelGrid>                
