--- a/church-ae-war/web/pages/administrator/ad_users.xhtml
+++ b/church-ae-war/web/pages/administrator/ad_users.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="content">
 
-        <h:form>
+        <h:form id="frmUsuarios">
 
             <ae:dataList id="dlUsuarios" value="#{adUser.listaUsuarios}" title="Usuarios" rowKey="#{row.id}" > 
                 <ui:define name="table">
@@ -23,16 +23,18 @@
                 </ui:define>
 
                 <ui:define name="formEdit">
+                    
                     <h:panelGrid columns="2">
                         <p:outputLabel for="itUsername" value="Usuario:"></p:outputLabel>
-                        <p:inputText id="itUsername" value="#{activeItem.username}"></p:inputText>
+                        <p:inputText id="itUsername" value="#{activeItem.username}" required="true" requiredMessage="El usuario es requerido"></p:inputText>
                         <p:outputLabel for="itPass1" value="Contraseña:"></p:outputLabel>
-                        <p:inputText id="itPass1" value="#{adUser.pass1}" type="password"></p:inputText>
+                        <p:inputText id="itPass1" value="#{adUser.pass1}" type="password" required="true" requiredMessage="La contraseña es requerida"></p:inputText>
                         <p:outputLabel for="itPass2" value="Confirmación Contraseña:"></p:outputLabel>
-                        <p:inputText id="itPass2" value="#{adUser.pass2}" type="password"></p:inputText>
+                        <p:inputText id="itPass2" value="#{adUser.pass2}" type="password" required="true" requiredMessage="Confirmación de la contraseña es requerida"></p:inputText>
                         <p:outputLabel for="itDescription" value="Descripción"></p:outputLabel>
                         <p:inputText id="itDescription" value="#{activeItem.description}"></p:inputText>
                     </h:panelGrid>                
+                    
                 </ui:define>
 
 
