--- a/church-ae-war/web/login.xhtml
+++ b/church-ae-war/web/login.xhtml
@@ -2,6 +2,7 @@
 <f:view xmlns="http://www.w3.org/1999/xhtml"
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:c="http://java.sun.com/jsp/jstl/core"
         xmlns:h="http://java.sun.com/jsf/html"
         xmlns:p="http://primefaces.org/ui" >
 
@@ -43,47 +44,69 @@
 
         <h:body class="BlueModena Geometry">
 
-            <h:form>
-                <script type="text/javascript">
-                    jQuery(function () {
-                        jQuery('.panels').equalHeights();
-                    });
-                </script>
+            <p:focus for="j_username" context="j_username"></p:focus>
 
+            <p:growl autoUpdate="true" globalOnly="true" />
+
+
+            <script type="text/javascript">
+                jQuery(function () {
+                    jQuery('.panels').equalHeights();
+                });
+            </script>
+
+            <form method="post" action="j_security_check" id="loginForm">
+                <c:if test="#{param['error']=='true'}">
+                    <h:panelGroup>
+                        <center>
+                            <f:event type="preRenderView"
+                                     listener="#{login.errorInicioSesion()}" />
+                        </center>
+                    </h:panelGroup>
+                </c:if>
 
 
                 <div class="Wid90 DispBlock MarAuto MarTopPerc5 TexAlCenter">
                     <div class="Wid33 MarAuto WidAutoOnMobile">
 
-                        <h:graphicImage name="/logo.png" styleClass="Fleft" library="images" />
+                        <h:graphicImage name="/catholic.png" library="images" />
 
                         <div class="EmptyBox30"></div>
                         <div class="Card ShadowEffect">
                             <div class="EmptyBox20"></div>
-                            <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-security Fs60 DispBlock"></i> Login / Sign Up</div>
+                            <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-security Fs60 DispBlock"></i> Iniciar sesión </div>
                             <div class="EmptyBox30"></div>
                             <div class="Wid100">
-                                <p:inputText placeholder="Email" styleClass="Wid80 TexAlCenter Fs18"></p:inputText>    
+                                <p:inputText placeholder="Usuario" styleClass="Wid80 TexAlCenter Fs18" id="j_username" autocomplete="off"></p:inputText>    
                             </div>
                             <div class="EmptyBox10"></div>
                             <div class="Wid100">
-
-
-
-                                <p:inputText placeholder="Password" styleClass="Wid80 TexAlCenter Fs18"></p:inputText>    
+                                <p:inputText placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" id="j_password"></p:inputText>    
+                            </div>
+                            <div class="EmptyBox30"></div>
+                            <div class="Wid100">     
+                                <!--
+                                <p:commandButton icon="i-icon ui-c fa fa-sign-in" styleClass="Fs18 White RaisedButton FloatNoneOnMobile" value="Ingresar / Registrarse"
+                                                 immediate="true" >
+                                </p:commandButton> 
+                                -->
+                                <button id="j_idt26" name="j_idt26" 
+                                        class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-left Fs18 White RaisedButton FloatNoneOnMobile" 
+                                        onclick="document.getElementById('loginForm').submit();" 
+                                        type="submit" role="button" aria-disabled="false">
+                                    <span class="ui-button-icon-left ui-icon ui-c i-icon ui-c fa fa-sign-in"></span>
+                                    <span class="ui-button-text ui-c">Ingresar / Registrarse</span>
+                                </button>
 
                             </div>
-                            <div class="EmptyBox30"></div><div id="j_idt13" class="ui-chkbox ui-widget"><div class="ui-helper-hidden-accessible">
-
-
-                                    <p:selectBooleanCheckbox value="#{selectBooleanView.value1}" />
-
-                                </div><div class="ui-chkbox-box ui-widget ui-corner-all ui-state-default"><span class="ui-chkbox-icon ui-icon ui-icon-blank ui-c"></span></div><span class="ui-chkbox-label">I Accept Terms And Policies</span></div>
-                            <div class="EmptyBox30"></div>
-                            <div class="Wid50 Fleft Responsive50"><button id="j_idt15" name="j_idt15" type="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-left  Fs18 White RaisedButton Fright FloatNoneOnMobile" onclick="window.open('dashboard.xhtml;jsessionid=1un2ibpde2o2y7ewszuaptilh', '_self')" role="button" aria-disabled="false"><span class="ui-button-icon-left ui-icon ui-c fa fa-sign-in"></span><span class="ui-button-text ui-c">Sign In / Sign Up</span></button></div>
+                            <!--
                             <div class="EmptyBox5 ShowOnMobile"></div>
-                            <div class="Wid50 Fleft Responsive50"><button id="j_idt17" name="j_idt17" type="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-left RedButton Fs18 White RaisedButton Fleft FloatNoneOnMobile" onclick="window.open('/modena/login.xhtml;jsessionid=1un2ibpde2o2y7ewszuaptilh', '_self')" role="button" aria-disabled="false"><span class="ui-button-icon-left ui-icon ui-c fa fa-lock"></span><span class="ui-button-text ui-c">Forgot Password ?</span></button></div>
-                            <div class="EmptyBox20"></div>
+                            <div class="Wid50 Fleft Responsive50">
+                                
+                                <p:commandButton icon="ui-icon ui-c fa fa-lock" styleClass="RedButton Fs18 White RaisedButton Fleft FloatNoneOnMobile" value="¿Olvidó su contraseña?">
+                                </p:commandButton>  
+                            </div>
+                            -->
                             <div class="EmptyBox20"></div>
                         </div>
                         <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular Gray">
@@ -93,8 +116,8 @@
                 </div>
 
 
+            </form>
 
-            </h:form>
 
 
         </h:body>
