cambios para encriptar con common codec

--- a/church-ae-war/web/login.xhtml
+++ b/church-ae-war/web/login.xhtml
@@ -81,7 +81,7 @@
                             </div>
                             <div class="EmptyBox10"></div>
                             <div class="Wid100">
-                                <p:inputText placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" id="j_password"></p:inputText>    
+                                <p:inputText placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" id="j_password" type="password"></p:inputText>    
                             </div>
                             <div class="EmptyBox30"></div>
                             <div class="Wid100">     
